# AntiBot

./: Cargo.toml
src/: bot.rs  config.rs  main.rs  structs.rs
templates/: verify.html
