[package]
name = "antibot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
tokio-native-tls = "0.3.1"

env_logger = "0.10.0"
once_cell = "1.18.0"
rand = "0.8.5"

futures = "0.3.28"

serde = "1.0.192"
serde_json = "1.0.108"

reqwest = { version = "0.11.22", features = ["json"] }

askama = "0.12.1"
axum = "0.6.20"

poise = "0.5.7"
